Normalize All weights with lock Active bug. #68480

Closed
opened 2019-08-09 17:34:55 +02:00 by Jose Conseco · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94

Blender Version
Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-08 20:54, hash: 4c9fe65745
Worked: (optional)

Short description of error
When using: Weights -> Normalize All, with Lock active option, the active group is not locked correctly - on one vert weight is increased.

Exact steps for others to reproduce the error
1)Use: Weights -> Normalize All, with Lock active option on selected mesh vertices.
2) all weights on current group verices should have stayed the same, but center right ver weight is increased.
BadWeights.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94 **Blender Version** Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-08 20:54, hash: `4c9fe65745` Worked: (optional) **Short description of error** When using: Weights -> Normalize All, with Lock active option, the active group is not locked correctly - on one vert weight is increased. **Exact steps for others to reproduce the error** 1)Use: Weights -> Normalize All, with Lock active option on selected mesh vertices. 2) all weights on current group verices should have stayed the same, but center right ver weight is increased. [BadWeights.blend](https://archive.blender.org/developer/F7656296/BadWeights.blend)
Author

Added subscriber: @JoseConseco

Added subscriber: @JoseConseco

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Not sure if it's a bug.
For a vertex to be normalized, the sum of all weights must be 1.0
But in this case, the vertex that changed the weight is only set in the active group (it is not seen in the other group).
So for the sum to be 1.0, the only place where the weight can change is in the active group.

So I believe this works as designed.

Not sure if it's a bug. For a vertex to be normalized, the sum of all weights must be 1.0 But in this case, the vertex that changed the weight is only set in the active group (it is not seen in the other group). So for the sum to be 1.0, the only place where the weight can change is in the active group. So I believe this works as designed.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Analyzing the code this really seems to have been a mistake from the original coder.
The orinal coder put a magic number 0 as the number indicating which vertex group to lock.

This fixes the problem:

diff --git a/source/blender/blenkernel/intern/deform.c b/source/blender/blenkernel/intern/deform.c
index a964cab3fa5..79dcdd15bf7 100644
--- a/source/blender/blenkernel/intern/deform.c
+++ b/source/blender/blenkernel/intern/deform.c
@@ -345,7 +345,7 @@ void defvert_normalize_lock_single(MDeformVert *dvert,
   else if (dvert->totweight == 1) {
     MDeformWeight *dw = dvert->dw;
     if ((dw->def_nr < vgroup_tot) && vgroup_subset[dw->def_nr]) {
-      if (def_nr_lock != 0) {
+      if (def_nr_lock != dw->def_nr) {
         dw->weight = 1.0f;
       }
     }

I will tag the animation team as this is an area often used by them.

Analyzing the code this really seems to have been a mistake from the original coder. The orinal coder put a magic number `0` as the number indicating which vertex group to lock. This fixes the problem: ``` diff --git a/source/blender/blenkernel/intern/deform.c b/source/blender/blenkernel/intern/deform.c index a964cab3fa5..79dcdd15bf7 100644 --- a/source/blender/blenkernel/intern/deform.c +++ b/source/blender/blenkernel/intern/deform.c @@ -345,7 +345,7 @@ void defvert_normalize_lock_single(MDeformVert *dvert, else if (dvert->totweight == 1) { MDeformWeight *dw = dvert->dw; if ((dw->def_nr < vgroup_tot) && vgroup_subset[dw->def_nr]) { - if (def_nr_lock != 0) { + if (def_nr_lock != dw->def_nr) { dw->weight = 1.0f; } } ``` I will tag the animation team as this is an area often used by them.

This issue was referenced by 9ad0b7f8c7

This issue was referenced by 9ad0b7f8c74174a21a4372b09888692c381984e0
Sybren A. Stüvel self-assigned this 2020-01-14 15:13:51 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:43:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68480
No description provided.